scenarios/benchmarking/k8_thredds_ingress/thredds_service.yml
apiVersion: v1
kind: Service
metadata:
  name: thredds-data
  namespace: thredds
spec:
  selector:
    app: thredds
    cluster: data
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: thredds-catalog
  namespace: thredds
spec:
  selector:
    app: thredds
    cluster: catalog
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
